Ajax search with suggestion done!

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,8 +1,8 @@
 @import "bootstrap";
 @import "toastr";
-// @import "bulma";
 @import "form";
 @import "userprofile";
 @import "product_index";
 @import "order_show";
 @import "search_result";
+@import "easy-autocomplete/dist/easy-autocomplete";
