--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,7 +19,7 @@
                       <% if current_user.user_image.attached? %>
                         <% if current_user.user_image.variable? %>
                             <div id="image">
-                              <%= image_tag current_user.user_image.variant(resize_to_fill: [140,140]),id: 'userimage' %>
+                              <%= image_tag current_user.user_image, id: 'userimage', style:"height:140px; width:140px;" %>
                             </div>
                         <% end %>
                       <% else %>
@@ -36,8 +36,9 @@
                     </h4>
                     <div class="mt-2">
                       <%= form_for(@user, url: image_update_path, method: :put, remote: :true, id: 'changePhoto' ) do |f| %>
-                        <%= f.file_field :user_image, class: 'btn btn-primary btn-sm',id: 'img',style:"display:none;" %>
-                        <label for="img" class="btn btn-primary"><i class="fa fa-fw fa-camera"></i> Change photo</label>
+                        <%= f.file_field :user_image, class: 'btn btn-primary btn-sm', id: 'imgUpload', style:"display:none;" %>
+                        <%#= f.file_field :user_image, id:'random' %>
+                        <label for="imgUpload" class="btn btn-primary"><i class="fa fa-fw fa-camera"></i> Change photo</label>
                     </div>
                   </div>
                   <div class="text-center text-sm-right">
