--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,31 +1,47 @@
 <div class="registration-form">
-   <%= form_with(model:@order) do |f| %>
-     <h5><center>Address details</center></h5>
-     <%= f.hidden_field :product_id, value: @product.id %> 
-     <div class="form-group">
-         <strong><%= f.label :product_name %></strong> 
-         <%= f.text_field :name, class:'form-control' ,value: @product.name, disabled: true if current_user.user? %>
-     <div>
-     <br>
-     <div class="form-group">
-         <strong><%= f.label :Address %></strong> 
-         <%= f.text_area :address, class:'form-control' %>
-     </div>
-     <br>
-     <div class="form-group">
-         <strong><%= f.label :price %></strong> 
-         <%= f.text_field :price, class:'form-control' ,value: '$'+@product.price.to_s, disabled: true if current_user.user? %>
-     <div>
-     <br>
-     <div class="form-group">
-         <strong><%= f.label :payment_type %></strong>
-         <%= f.text_field :payment_type, class:'form-control' ,value: 'cash on delivery', readonly: true %>
-     </div>
-     <br>
-         <%= f.submit :submit,class:'btn btn-success' %>
-   <% end %>
+    <%= form_with(model:@order, id: 'orderForm') do |f| %>
+        <h5><center>Address details</center></h5>
+        <%= f.hidden_field :product_id, value: @product.id %> 
+        <div class="form-group">
+            <strong><%= f.label :product_name %></strong> 
+            <%= f.text_field :name, class:'form-control' ,value: @product.name, disabled: true if current_user.user? %>
+        <div>
+        <br>
+        <div class="form-group">
+            <strong><%= f.label :Address %></strong> 
+            <%= f.text_area :address, class:'form-control' %>
+        </div>
+        <br>
+        <div class="form-group">
+            <strong><%= f.label :price %></strong> 
+            <%= f.text_field :price, class:'form-control' ,value: '$'+@product.price.to_s, disabled: true if current_user.user? %>
+        <div>
+        <br>
+        <div class="form-group">
+            <strong><%= f.label :payment_type %></strong>
+            <%= f.text_field :payment_type, class:'form-control' ,value: 'cash on delivery', readonly: true %>
+        </div>
+        <br>
+            <%= f.submit :submit,class:'btn btn-success' %>
+    <% end %>
 </div>
-
+<script>
+$("form#orderForm").validate({
+        rules:{
+            'order[address]':{
+               required: true,
+               minlength: 10    
+            }  
+        },
+        messages: {
+            'order[address]':{
+                required: "Address required",
+                minlength: "Enter full Address"  
+            }
+        }
+        
+});
+</script>
 
 
 
