--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,31 +1,49 @@
 <% current_user.orders.each do |order| %>
-<div class="container mt-5 mb-5">
-    <div class="d-flex justify-content-center row">
-        <div class="col-md-10">
-            <div class="row p-2 bg-white border rounded">
-                <div class="col-md-3 mt-1">
-                    <% if order.product.product_image.attached? %>
-                        <% if order.product.product_image.variable? %>
-                             <%= image_tag order.product.product_image, class:'img-fluid img-responsive rounded product-image' %>
+    <div class="container mt-5 mb-5">
+        <div class="d-flex justify-content-center row">
+            <div class="col-md-10">
+                <div class="row p-2 bg-white border rounded">
+                    <div class="col-md-3 mt-1">
+                        <% if order.product.product_image.attached? %>
+                            <% if order.product.product_image.variable? %>
+                                <%= image_tag order.product.product_image, class:'img-fluid img-responsive rounded product-image' %>
+                            <% end %>
+                        <% else %>
+                            <%= image_tag("default.png", alt: "user", class:'img-fluid img-responsive rounded product-image') %>
                         <% end %>
-                    <% else %>
-                        <%= image_tag("default.png", alt: "user", class:'img-fluid img-responsive rounded product-image') %>
-                    <% end %>
-                </div>
-                <div class="col-md-6 mt-1">
-                    <h5><%= order.product.name %></h5>
-                    <div class="d-flex flex-row">
-                        <div class="ratings mr-2"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></div>
                     </div>
-                     <p class="text-justify text-truncate para mb-0"><strong>Order reference ID: </strong><%= order.order_ref %></p>
-                     <p class="text-justify text-truncate para mb-0"><strong>Address of delivery: </strong><%= order.address %></p>
-                     <p class="text-justify text-truncate para mb-0"><strong>Payment method: </strong><%= order.payment_type %></p>
-                     <p class="text-justify text-truncate para mb-0"><strong>Total price: </strong><%= order.product.price %></p>
-                     <p class="text-justify text-truncate para mb-0"><strong>Order date: </strong><%= order.created_at.strftime("%d %b %Y") %></p>
+                    <div class="col-md-6 mt-1">
+                        <h5><%= order.product.name %></h5>
+                        <div class="d-flex flex-row">
+                            <div class="ratings mr-2">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                            </div>
+                        </div>
+                        <p class="text-justify text-truncate para mb-0"><strong>Order reference ID: </strong><%= order.order_ref %></p>
+                        <p class="text-justify text-truncate para mb-0"><strong>Address of delivery: </strong><%= order.address %></p>
+                        <p class="text-justify text-truncate para mb-0"><strong>Payment method: </strong><%= order.payment_type %></p>
+                        <p class="text-justify text-truncate para mb-0"><strong>Total price: </strong><%= order.product.price %></p>
+                        <p class="text-justify text-truncate para mb-0"><strong>Order date: </strong><%= order.created_at.strftime("%d %b %Y") %></p>
+                        <p class="text-justify text-truncate para mb-0">
+                            <strong>
+                            <% if order.product.review.present? %> 
+                                Review:
+                            <% end %> 
+                            </strong>
+                            <%= order.product.review %>
+                            <div class="block-div">
+                                <%= link_to "Write Review", "javascript:void(0);", class: 'btn btn-primary btn-sm reviewButton' %><br><br>
+                                <div class="writeReviewDiv">
+                                    <%= render partial: 'reviewForm', locals: {product_id: order.product.id} %>
+                                </div>
+                            </div>
+                        </p>
+                    </div>
                 </div>
-        
             </div>
         </div>
     </div>
-</div>
 <% end %>
