--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,13 +1,15 @@
 <br>
   <tbody id="productData">
-      <% render partial: "formdata", collection: @products, as: :product %>
+    <% render partial: "formdata", collection: @products, as: :product %>
   </tbody>  
-<div id="index">
-  <%= render 'next_link' %>
-</div>
-<div id="searchResult">
-</div>
-
+  <div id="index">
+    <%= render 'next_link' %>
+  </div>
+  <div id="searchResult">
+  </div>
+  <a class="top-link hide" href="" id="js-top">
+    <span class="screen-reader-text" style="float:right; margin:20px;"><img src="https://img.icons8.com/ios-filled/50/000000/circled-up-2.png"/></span>
+  </a>
 
 
 
