Exported csv to email done!

--- a/app/views/products/index.js.erb
+++ b/app/views/products/index.js.erb
@@ -1,2 +1,2 @@
 $('#main').remove();
-$('#index').show(3000).html("<%= j render partial: 'next_link' %>");
+$('#index').html("<%= j render partial: 'next_link' %>");
