--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,8 @@
 <br>
+  <% if user_signed_in? && current_user.admin? %>
+   <%= link_to "Send csv", export_path, class:'btn btn-primary btn-sm', style:"text-decoration:none; font-size:20px; margin:20px;" %><br>
+  <% end %>
+  <%#= link_to "download csv", products_path(format: "csv"), style:"text-decoration:none; font-size:20px;" %>
   <tbody id="productData">
     <% render partial: "formdata", collection: @products, as: :product %>
   </tbody>  
@@ -8,9 +12,10 @@
   <div id="searchResult">
   </div>
   <a class="top-link hide" href="" id="js-top">
-    <span class="screen-reader-text" style="float:right; margin:20px;"><img src="https://img.icons8.com/ios-filled/50/000000/circled-up-2.png"/></span>
+    <span class="screen-reader-text" style="float:right; margin:20px;">
+      <img src="https://img.icons8.com/ios-filled/50/000000/circled-up-2.png"/>
+    </span>
   </a>
-
 
 
 
