--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -11,11 +11,7 @@
   </div>
   <div id="searchResult">
   </div>
-  <a class="top-link hide" href="" id="js-top">
-    <span class="screen-reader-text" style="float:right; margin:20px;">
-      <img src="https://img.icons8.com/ios-filled/50/000000/circled-up-2.png"/>
-    </span>
-  </a>
+  <%= render 'datatable' %>
 
 
 
