--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -20,7 +20,7 @@
       <a class="navbar-brand mt-2 mt-lg-0" href="#"><img src="https://mdbootstrap.com/img/logo/mdb-transaprent-noshadows.png" height="15" alt="" loading="lazy"/></a>
        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-             <%= link_to "Product",root_path,class: 'nav-link' %>
+             <%= link_to "View Product",root_path,class: 'nav-link' %>
           </li>
           <li class="nav-item">
              <% if user_signed_in? && current_user.role == "admin" %> 
